<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_name_margin"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/dark"
            android:textSize="@dimen/my_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/my_photo"
            android:layout_width="@dimen/my_photo_size"
            android:layout_height="@dimen/my_photo_size"
            android:layout_margin="@dimen/my_photo_margin"
            android:background="@drawable/me"
            android:contentDescription="@string/my_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/contacts_layout_margin"
            app:layout_constraintBottom_toBottomOf="@id/my_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/my_photo"
            app:layout_constraintTop_toTopOf="@id/my_photo">

            <TextView
                android:id="@+id/my_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/contact_margin"
                android:gravity="center_horizontal"
                android:text="@string/my_phone"
                android:textColor="@color/dark"
                android:textSize="@dimen/contact_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/my_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/contact_margin"
                android:gravity="center_horizontal"
                android:text="@string/my_mail"
                android:textColor="@color/dark"
                android:textSize="@dimen/contact_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_phone" />

            <TextView
                android:id="@+id/my_git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/contact_margin"
                android:gravity="center_horizontal"
                android:text="@string/my_git"
                android:textColor="@color/dark"
                android:textSize="@dimen/contact_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_mail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/stack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stack_margin"
            android:lines="7"
            android:minLines="7"
            android:text="@string/stack"
            android:textColor="@color/dark"
            android:textSize="@dimen/stack_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/instagram_margin"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/instagram"
            android:textColor="@color/dark"
            android:textSize="@dimen/instagram_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>